--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -5,10 +5,15 @@
 @import './Login.scss';
 @import './Navbar.scss';
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%;
 }
 
 #main {
