--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -66,7 +66,7 @@
 }
 
 #login {
-  background-image: url('../assets/images/bg.png');
+  background-image: url('../assets/images/bg.jpg');
   background-position-x: left;
   background-position-y: center;
   background-repeat: no-repeat;
