--- a/frontend/src/styles/Login.scss
+++ b/frontend/src/styles/Login.scss
@@ -79,6 +79,15 @@
   width: 100%;
 }
 
+.login-help {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  padding: 1rem 0;
+}
+
 .login-modal {
   button {
     background-color: $background-grey;
