--- a/frontend2/src/styles/App.scss
+++ b/frontend2/src/styles/App.scss
@@ -1,14 +1,20 @@
 @import './_mixins.scss';
 @import './_variables.scss';
 
-body, h1, h2, h3, h4, h5 {
+body,
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: $font-family;
 }
 
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 
-  &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
@@ -87,7 +93,8 @@ input[type="number"] {
       padding-right: 2rem;
     }
 
-    .fa-circle-notch { // Loading icon
+    .fa-circle-notch {
+      // Loading icon
       font-size: 3rem;
     }
   }
@@ -102,7 +109,7 @@ input[type="number"] {
       margin: 0;
       padding: 0;
       vertical-align: middle;
-      
+
       &:focus {
         outline: none;
       }
@@ -125,6 +132,7 @@ input[type="number"] {
   }
 }
 
-.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+.navbar-fixed-bottom .navbar-collapse,
+.navbar-fixed-top .navbar-collapse {
   max-height: unset;
 }
