feat: align email notification text with in-app notifications

--- a/backend/lcfs/web/api/email/templates/idir_analyst__initiative_agreement__returned_to_analyst.html
+++ b/backend/lcfs/web/api/email/templates/idir_analyst__initiative_agreement__returned_to_analyst.html
@@ -1,3 +1,3 @@
 {% extends 'notification_base.html' %}
-{% set notification_type = 'Initiative Agreement' %}
-{% set url_slug = 'initiative-agreements' %}
+{% set notification_type = 'Initiative agreement' %}
+{% set url_slug = 'initiative-agreement' %}
