--- a/backend/lcfs/web/api/email/templates/idir_analyst__compliance_report__submitted_for_review.html
+++ b/backend/lcfs/web/api/email/templates/idir_analyst__compliance_report__submitted_for_review.html
@@ -1,3 +1,3 @@
 {% extends 'notification_base.html' %}
-{% set notification_type = 'Credit Record' %}
-{% set url_slug = 'credit-records' %}
+{% set notification_type = 'Compliance report' %}
+{% set url_slug = 'compliance-reporting' %}
