--- a/backend/lcfs/web/api/email/templates/idir_analyst__transfer__rescinded_action.html
+++ b/backend/lcfs/web/api/email/templates/idir_analyst__transfer__rescinded_action.html
@@ -1,3 +1,3 @@
 {% extends 'notification_base.html' %}
 {% set notification_type = 'Transfer' %}
-{% set url_slug = 'transfer-requests' %}
+{% set url_slug = 'transfers' %}
