--- a/backend/lcfs/web/api/email/templates/idir_director__initiative_agreement__analyst_recommendation.html
+++ b/backend/lcfs/web/api/email/templates/idir_director__initiative_agreement__analyst_recommendation.html
@@ -1,3 +1,3 @@
 {% extends 'notification_base.html' %}
-{% set notification_type = 'Initiative Agreement' %}
-{% set url_slug = 'initiative-agreements' %}
+{% set notification_type = 'Initiative agreement' %}
+{% set url_slug = 'initiative-agreement' %}
